--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
                     </div>
                     <p class="seemoretest">See all details</p>
                 </div>
+
+                <div class="top-cart">
+                    <h1>Continue shoping deals</h1>
+                    <div class="images-div">
+                        <img src="./assets/mob1.jpg" alt="">
+                        <img src="./assets/mob1.jpg" alt="">
+                        <img src="./assets/mob1.jpg" alt="">
+                        <img src="./assets/mob1.jpg" alt="">
+                    </div>
+                    <p class="seemoretest">See all details</p>
+                </div>
             </div>
         </div>
 
