--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="icon" type="image/x-icon" href="./title-logo.png">
     <title>Online shoping site in india</title>
 </head>
 
@@ -101,7 +102,14 @@
 
         <!-- first cart  -->
         <div class="slider">
-            <img class="slider-img" src="./assets//background.png" alt="" srcset="">
+            <img id="img1" class="slider-img" src="./assets/background.png">
+            <img id="img2" class="slider-img" src="./assets/background2.jpg">
+            <img id="img3" class="slider-img" src="./assets/background3.jpg">
+            <img id="img4" class="slider-img" src="./assets/background4.jpg">
+            <img id="img5" class="slider-img" src="./assets/background5.jpg">
+            <img id="img6" class="slider-img" src="./assets/background6.jpg">
+            <img id="img7" class="slider-img" src="./assets/background7.jpg">
+            
         </div>
         <div class="slider-container">
             <div class="top-cart">
